<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hiralramani.temperature.MainActivity">



    <EditText
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:text="@string/inputtext"
        android:hint="@string/inputhint"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.37"
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:textColorLink="?attr/actionModeSplitBackground"
        android:textColorHint="@color/colorPrimary" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText2"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/anshint"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:textColorLink="?attr/actionModeSplitBackground"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textColorHint="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimary"
        android:shadowColor="@color/colorAccent"
        android:textColor="@color/colorPrimary"
        android:visibility="visible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:text="@string/button"
        android:onClick="convertmethod"
        app:layout_constraintLeft_toLeftOf="@+id/editText2"
        app:layout_constraintRight_toLeftOf="@+id/resetID"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.12"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/resetID"
        android:contextClickable="true"
        android:shadowColor="@android:color/holo_red_light"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/background_light" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:id="@+id/radioGroup"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton4"
            android:layout_weight="1"
            android:text="@string/radio2" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3"
            android:layout_weight="1"
            android:text="@string/radio1"
            android:checked="true" />
    </RadioGroup>

    <ListView
        android:layout_width="348dp"
        android:layout_height="166dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:id="@+id/listviewID"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintVertical_bias="0.0"
        android:contextClickable="true"
        android:background="@color/colorAccent"
        android:cacheColorHint="@android:color/background_light" />

    <Button
        android:text="@string/resetbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resetID"
        android:onClick="reset"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintRight_toRightOf="@+id/editText2"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/background_light" />

</android.support.constraint.ConstraintLayout>
